sample/error/eval_wdt_bool.bfr
codegen [
  *(if 123 then [] else [])
]